--- a/style.css
+++ b/style.css
@@ -33,3 +33,9 @@ body {
 /*   padding-top:2%; */
   padding-bottom:2%;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+}
